[tool.poetry]
name = "DHDRNet"
version = "0.1.0"
description = ""
authors = ["Shane Segal <shane@smsegal.ca>"]

[tool.poetry.dependencies]
python = "~3.8"
torch = "^1.5.0"
torchvision = "^0.6.0"
colour-hdri = {extras = ["optional"], version = "^0.1.6"}
opencv-python = "^4.1.2"
scikit-image = "^0.16.2"
more-itertools = "^8.2.0"
pillow = "^7.0.0"
tqdm = "^4.46.0"
pytorch-lightning = "^0.8.5"
pytorch-msssim = "^0.2.0"
recordclass = "^0.13.2"
pandas = "^1.0.4"
tables = "^3.6.1"
sewar = "^0.4.3"
exifread = "^2.1.2"
torchsummary = "^1.5.1"
openpyxl = "^3.0.4"
sklearn = "^0.0"
lpips = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
matplotlib = "^3.1.3"
ipykernel = "^5.1.4"
isort = "^4.3.21"
mypy = "^0.770"
seaborn = "^0.10.1"
pylama = "^7.7.1"
altair = "^4.1.0"
data-science-types = "^0.2.17"
jupytext = "^1.6.0"
pyls-black = "^0.4.6"
black = {version = "^20.8b1", allow-prereleases = true}
python-language-server = "^0.35.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
