[tool.poetry]
name = "DHDRNet"
version = "0.1.0"
description = ""
authors = ["Shane Segal <shane@smsegal.ca>"]

[tool.poetry.dependencies]
python = "~3.8"
scikit-image = "^0.16.2"
more-itertools = "^8.2.0"
pillow = "^7.0.0"
tqdm = "^4.56.0"
pytorch-msssim = "^0.2.0"
pandas = "^1.0.4"
tables = "^3.6.1"
sewar = "^0.4.3"
exifread = "^2.1.2"
torchsummary = "^1.5.1"
openpyxl = "^3.0.4"
sklearn = "^0.0"
lpips = "^0.1.1"
opencv-python-headless = "^4.4.0"
recordclass = "^0.14.1"
exposure_fusion = "^0.1.1"
pylint = "^2.6.0"
pylama = "^7.7.1"
Deprecated = "^1.2.10"
torch = "^1.7.0"
torchvision = "^0.8.1"
pytorch-lightning = "^1.0.8"
fire = "^0.3.1"
ipykernel = "^5.4.2"
plumbum = "^1.6.9"
IProgress = "^0.4"
ipywidgets = "^7.6.3"
rich = "^9.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
matplotlib = "^3.1.3"
# ipykernel = "^5.1.4"
mypy = "^0.770"
seaborn = "^0.10.1"
altair = "^4.1.0"
data-science-types = "^0.2.17"
black = {version = "^20.8b1", allow-prereleases = true}

[tool.isort]
profile = "black"
multi_line_output = 3
float_to_top = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
